# nexus-agent

./: .coverage  .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  SECURITY.md  add_stripe.py  auto_confirm_patch.py  create_test.py  demo_proof.txt  deploy_staging.sh  docker-compose.yml  fix.py  fix_agent.py  fix_demo.py  fix_demo2.py  fix_demo_final.py  fix_return_url.py  fix_stripe_charge.py  healthcheck.sh  patch_stripe.py  pilot_email.txt  pre_demo_check.sh  pyproject.toml  run_demo.py  run_demo_real.py  test_report.txt  verify_audit.py
.github/workflows/: deploy.yml  test.yml
docs/: liability_template.md
infra/: main.tf  outputs.tf  variables.tf
nexus_agent/: __init__.py  __main__.py  agent.py  audit.py  budget.py  exceptions.py  memory.py  policy.py  rate_limiter.py  wallet.py
nexus_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nexus_agent/tools/: __init__.py  commerce.py  discovery.py
tests/: __init__.py  conftest.py  test_agent_unit.py  test_stripe.py  test_tools.py
