[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-agent"
version = "0.1.0"
description = "Nexus Agent autonomous commerce framework"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [
  { name = "Nexus Agent Team" }
]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]
dependencies = [
  "pydantic>=2.6,<3",
  "httpx>=0.26,<0.31",
  "structlog>=24.0,<25",
  "cryptography>=41.0,<42",
  "anyio>=3.8,<5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=4.0,<5.0",
  "pytest-asyncio>=0.22,<0.25",
  "respx>=0.20,<0.24",
  "ruff>=0.0.0,<1.0.0",
  "mypy>=1.10,<2.0",
  "black>=24.0,<25.0"
]

[tool.setuptools]
packages = ["nexus_agent", "nexus_agent.tools"]

[tool.setuptools.package-data]
"nexus_agent" = ["py.typed"]
